Update online games 1.html

--- a/online games 1.html
+++ b/online games 1.html
@@ -278,13 +278,14 @@
     </style>
 </head>
 <body>
-    <nav class="navbar">
-        <a href="file:///C:/Users/bezaw/OneDrive/%E3%83%89%E3%82%AD%E3%83%A5%E3%83%A1%E3%83%B3%E3%83%88/project/x1.html"><i class="fas fa-home"></i> Home</a>
-        <a href="file:///C:/Users/bezaw/OneDrive/%E3%83%89%E3%82%AD%E3%83%A5%E3%83%A1%E3%83%B3%E3%83%88/project/shop3.html"><i class="fas fa-store"></i> Store</a>
-        <a href="file:///C:/Users/bezaw/OneDrive/%E3%83%89%E3%82%AD%E3%83%A5%E3%83%A1%E3%83%B3%E3%83%88/project/online%20games%201.html" class="active"><i class="fas fa-gamepad"></i> Play Online</a>
-        <a href="file:///C:/Users/bezaw/OneDrive/%E3%83%89%E3%82%AD%E3%83%A5%E3%83%A1%E3%83%B3%E3%83%88/project/one%20about%20us%20.html"><i class="fas fa-info-circle"></i> About Us</a>
-        <a href="file:///C:/Users/bezaw/OneDrive/%E3%83%89%E3%82%AD%E3%83%A5%E3%83%A1%E3%83%B3%E3%83%88/project/one%20contact%20.html"><i class="fas fa-envelope"></i> Contact</a>
+       <nav class="navbar">
+        <a href="x1.html" ><i class="fas fa-home"></i> Home</a>
+        <a href="shop3.html"><i class="fas fa-store"></i> Store</a>
+        <a href="online games 1.html"class="active"><i class="fas fa-gamepad"></i> Play Online</a>
+        <a href="one about us.html"><i class="fas fa-info-circle"></i> About Us</a>
+        <a href="one contact .html"><i class="fas fa-envelope"></i> Contact</a>
     </nav>
+
 
     <div class="games-container">
         <h1>Nexus Online Games</h1>
